<resources>
    <string name="app_name">ALLerta</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="pergunta_publicacao">Qual informação você deseja enviar à Defesa Civil?</string>
    <string name="pergunta_configuracoes">Você deseja receber alertas da Defesa Civil?</string>

    <string name="alterar_senha">Alterar senha</string>
    <string name="area_morando">Área que deseja receber os alertas da Defesa Civil</string>
    <string name="publicacao_enviada">Publicação enviada.</string>
    <string name="publicacao_sem_imagem">Publicação não pode ser enviada. Precisa-se de uma imagem anexada.</string>


    <string name="notificacoes">Notificações</string>
    <string name="pessoal">Pessoal</string>

    <string name="filtrar_area">Filtre publicações por área</string>
    <string name="notificacoes_ativadas">Ao confirmar, você receberá notificações da Defesa Civil.</string>
    <string name="notificacoes_desativadas">Ao confirmar, nenhuma notificação da Defesa Civil será mais enviada a você.</string>
    <string name="anexar_foto">Anexar foto</string>
    <string name="enviar">Enviar</string>
    <string name="confirmar">Confirmar</string>

    <string name="titulo_meu_allerta">Meu ALLerta</string>
    <string name="titulo_publicacao">Publicar</string>
    <string name="titulo_posts_rede">Posts na Rede</string>
    <string name="titulo_populacao">População</string>
    <string name="titulo_configuracoes">Ajustes</string>
    <string name="titulo_tempo">Tempo</string>


    <string name="senha_diferente">As senhas não são iguais.</string>
    <string name="senha_ja_e_sua">Essa já é sua senha.</string>
    <string name="senha_pequena">Senha muito pequena. No mínimo a senha deve ter 8 caracteres.</string>

    <string name="alteracoes_aplicadas">As alterações foram devidamente aplicadas.</string>

    <string name="nada_alterado">Opa! Nenhuma de suas configurações foram alteradas.</string>
    <string name="sem_info">Nenhum texto foi escrito para poder ser enviado.</string>
    <string name="pouca_info">Texto muito curto. Descreva melhor a situação para que a Defesa Civil possa ajudar mais efetivamente.</string>
    <string name="no_minimo">No mínimo</string>
    <string name="cancelado">Cancelado.</string>
    <string name="caracteres">caracteres.</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
