<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="@dimen/fab_margin">
     <TextView
            android:id="@+id/txtPerguntaPublicacao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pergunta_publicacao"
            android:textSize="18dp"/>

    <!--área da publicação -->
     <EditText
            android:id="@+id/edtxtAreaPublicacao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textMultiLine"
            android:lines="7"
            android:maxLines="12"
            />

    <TextView
        android:id="@+id/txtContadorCaractere"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        android:textSize="18dp"
        android:layout_gravity="right"
        />

    <!--anexo (foto) -->
     <TextView
            android:id="@+id/txtAnexar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/anexar_foto"
            android:textSize="18dp"
            android:layout_gravity="top"/>

     <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

    <!--enviar -->
     <Button
            android:id="@+id/btnEnviar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enviar"
            android:layout_gravity="center"

            />

</LinearLayout>
